--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = proot-termux
 	url = https://github.com/termux/proot.git
 	branch = master
+[submodule "proot"]
+	path = proot
+	url = https://github.com/termux/proot
